--- a/toca-app/src/Components/Blogs/Blogs.css
+++ b/toca-app/src/Components/Blogs/Blogs.css
@@ -1,5 +1,8 @@
 .Box1 , .Box2 , .Box3 {
     display:flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     flex-direction: column;
     border: 1px transparent none;
     background:linear-gradient(90deg, rgba(0, 0, 0, 0.349),rgb(63, 60, 60),rgba(0, 0, 0, 0.397));
@@ -14,6 +17,9 @@
 
 .wrapper1{
     display:flex;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     justify-content: space-around;
     margin-top:10%;
 }
@@ -24,6 +30,9 @@
 @media only screen and (max-width:480px){
     .wrapper1{
         display:flex;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
         flex-direction: column;
     }
     .Box1 , .Box2 , .Box3 {
