--- a/toca-app/src/Components/Navbar/Navbar.css
+++ b/toca-app/src/Components/Navbar/Navbar.css
@@ -2,8 +2,8 @@
 .Navigation-bar{
     border: 1px transparent solid;
     background-color: rgba(0, 0, 0, 0.358);
-    padding:3% 2% 3% 0;
-    margin-top:7%;
+    padding:2% 2% 2% 0;
+    margin-top:3%;
     position: relative;
     z-index: 1;
 }
@@ -15,6 +15,7 @@ display: -webkit-flex;
 display: -ms-flexbox;
 list-style-type: none;
 justify-content: flex-end;
+margin-left:50%;
 }
 
 .Navigation-bar ul li .nav-link{
