--- a/toca-app/src/Components/Sidebar/Sidebardata.css
+++ b/toca-app/src/Components/Sidebar/Sidebardata.css
@@ -70,6 +70,7 @@
     flex-direction: column;
     list-style-type: none;
     border: transparent none;
+    margin-left:0;
    
     }
     .Navigation-bar ul li{
@@ -82,6 +83,7 @@
           color:rgb(189, 135, 18);
           font-family: 'Revalia', cursive;
           font-size:35px;
+         
    
       }
 
